<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.preferences.PreferencesPage">


        <TextView
            android:id="@+id/text_preferences"
            android:layout_width="199dp"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:text="My Account"
            android:textAlignment="center"
            android:textColor="#0B0A0A"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/exercise"
            android:layout_width="330dp"
            android:layout_height="69dp"
            android:layout_marginTop="179dp"
            android:hint="Exercise"
            android:background="@drawable/rounded_input_background"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/location"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginTop="264dp"
            android:hint="Location"
            android:background="@drawable/rounded_input_background"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="368dp"
            android:layout_marginEnd="15dp"
            android:text="Gender:"
            android:textColor="#0B0A0A"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/gender_radio_group"
            app:layout_constraintHorizontal_bias="0.223"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/gender"
            app:layout_constraintStart_toEndOf="@id/gender"
            app:layout_constraintTop_toTopOf="@id/gender">

            <RadioButton
                android:id="@+id/male_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="Male" />

            <RadioButton
                android:id="@+id/female_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="Female" />

        </RadioGroup>


        <EditText
            android:id="@+id/dob_edit_text"
            android:layout_width="183dp"
            android:layout_height="45dp"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="Date of Birth"
            app:layout_constraintBottom_toBottomOf="@id/label_dob"
            app:layout_constraintStart_toEndOf="@id/label_dob"
            app:layout_constraintTop_toTopOf="@id/label_dob"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="462dp" />


        <TextView
            android:id="@+id/label_dob"
            android:layout_width="113dp"
            android:layout_height="26dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="428dp"
            android:layout_marginEnd="15dp"
            android:text="Date of Birth:"
            android:textColor="#0B0A0A"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/dob_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="51dp" />

        <EditText
            android:id="@+id/bio"
            android:layout_width="317dp"
            android:layout_height="104dp"
            android:layout_marginTop="478dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:text="Bio"
            android:background="@drawable/rounded_input_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="650dp"
            android:text="Save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>