...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmailAddressFP"
        android:layout_width="305dp"
        android:layout_height="49dp"
        android:layout_marginTop="312dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input_background"
        android:ems="10"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="305dp"
        android:layout_height="49dp"
        android:layout_marginTop="460dp"
        android:padding="10dp"
        android:text="@string/send_email"
        android:textAlignment="center"
...
